added dataset link

--- a/0_Introduction_Setup.ipynb
+++ b/0_Introduction_Setup.ipynb
@@ -67,6 +67,9 @@
     "  - Validation: 112 images per class (224 total).\n",
     "  - Test: 280 images per class (560 total).\n",
     "\n",
+    "\n",
+    "## Important Note : \n",
+    ">the dataset isn't available on git.To get the notebooks working you need to **Download** the dataset ( here is the [link](https://drive.google.com/file/d/1mfcb2PY9w_mb2n96PyYDgyJ22qm9mkZb/view?usp=sharing) ) , create a folder called dataset and extract the compressed folder to match the given folder structure. \n",
     "### Folder Structure\n",
     "```bash\n",
     "dataset\n",
@@ -81,6 +84,7 @@
     "│   ├── non_guide_dogs # ~280 images\n",
     "```\n",
     "\n",
+    "\n",
     "Let's verify the dataset and visualize some samples."
    ]
   },
@@ -90,11 +94,11 @@
    "id": "87428c36-46d9-4a38-b06e-25483c27ba76",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-21T22:30:08.658949Z",
-     "iopub.status.busy": "2025-05-21T22:30:08.658692Z",
-     "iopub.status.idle": "2025-05-21T22:30:08.677700Z",
-     "shell.execute_reply": "2025-05-21T22:30:08.677316Z",
-     "shell.execute_reply.started": "2025-05-21T22:30:08.658927Z"
+     "iopub.execute_input": "2025-06-03T23:26:07.858522Z",
+     "iopub.status.busy": "2025-06-03T23:26:07.858256Z",
+     "iopub.status.idle": "2025-06-03T23:26:07.863598Z",
+     "shell.execute_reply": "2025-06-03T23:26:07.863197Z",
+     "shell.execute_reply.started": "2025-06-03T23:26:07.858500Z"
     }
    },
    "outputs": [
