--- a/2_Fine_Tuning_No_Optimization.ipynb
+++ b/2_Fine_Tuning_No_Optimization.ipynb
@@ -44,7 +44,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "# Numerical and data handling£\n",
+    "# Numerical and data handling\n",
     "import numpy as np\n",
     "\n",
     "# PyTorch and related libraries\n",
@@ -846,7 +846,6 @@
     "from IPython import get_ipython\n",
     "import torch\n",
     "\n",
-    "# Clear GPU memory\n",
     "if torch.cuda.is_available():\n",
     "    torch.cuda.empty_cache()\n",
     "print(\"GPU memory cleared.\")\n",
