--- a/3_Fine_Tuning_With_Optimization.ipynb
+++ b/3_Fine_Tuning_With_Optimization.ipynb
@@ -28,15 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "b80769d7-2aee-4b02-9dd8-fd77dc7d5211",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:47.242661Z",
-     "iopub.status.busy": "2025-06-12T13:50:47.242338Z",
-     "iopub.status.idle": "2025-06-12T13:50:52.259265Z",
-     "shell.execute_reply": "2025-06-12T13:50:52.258516Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:47.242634Z"
+     "iopub.execute_input": "2025-06-12T14:31:56.599824Z",
+     "iopub.status.busy": "2025-06-12T14:31:56.599570Z",
+     "iopub.status.idle": "2025-06-12T14:32:00.284021Z",
+     "shell.execute_reply": "2025-06-12T14:32:00.283460Z",
+     "shell.execute_reply.started": "2025-06-12T14:31:56.599805Z"
     }
    },
    "outputs": [],
@@ -75,15 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "b0847875-6669-4ff6-9122-9d5463da0381",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:53.621364Z",
-     "iopub.status.busy": "2025-06-12T13:50:53.620856Z",
-     "iopub.status.idle": "2025-06-12T13:50:53.660379Z",
-     "shell.execute_reply": "2025-06-12T13:50:53.659838Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:53.621329Z"
+     "iopub.execute_input": "2025-06-12T14:32:00.285156Z",
+     "iopub.status.busy": "2025-06-12T14:32:00.284808Z",
+     "iopub.status.idle": "2025-06-12T14:32:00.417354Z",
+     "shell.execute_reply": "2025-06-12T14:32:00.416751Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:00.285140Z"
     }
    },
    "outputs": [
@@ -123,15 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "c6d689da-ed0a-4172-8a0c-a4c2df393f5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:54.128639Z",
-     "iopub.status.busy": "2025-06-12T13:50:54.128128Z",
-     "iopub.status.idle": "2025-06-12T13:50:54.175345Z",
-     "shell.execute_reply": "2025-06-12T13:50:54.173839Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:54.128610Z"
+     "iopub.execute_input": "2025-06-12T14:32:00.418123Z",
+     "iopub.status.busy": "2025-06-12T14:32:00.417920Z",
+     "iopub.status.idle": "2025-06-12T14:32:00.429529Z",
+     "shell.execute_reply": "2025-06-12T14:32:00.428893Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:00.418104Z"
     }
    },
    "outputs": [],
@@ -172,15 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "17ccccf2-22d5-40ff-b3da-5ccc7c33a051",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:54.897316Z",
-     "iopub.status.busy": "2025-06-12T13:50:54.896896Z",
-     "iopub.status.idle": "2025-06-12T13:50:54.902494Z",
-     "shell.execute_reply": "2025-06-12T13:50:54.901774Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:54.897294Z"
+     "iopub.execute_input": "2025-06-12T14:32:00.430630Z",
+     "iopub.status.busy": "2025-06-12T14:32:00.430404Z",
+     "iopub.status.idle": "2025-06-12T14:32:00.434922Z",
+     "shell.execute_reply": "2025-06-12T14:32:00.434243Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:00.430611Z"
     }
    },
    "outputs": [],
@@ -221,15 +221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "379a50de-0144-4ee0-9b5e-d97fb02e8bc2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:55.779519Z",
-     "iopub.status.busy": "2025-06-12T13:50:55.778575Z",
-     "iopub.status.idle": "2025-06-12T13:50:55.787435Z",
-     "shell.execute_reply": "2025-06-12T13:50:55.786528Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:55.779486Z"
+     "iopub.execute_input": "2025-06-12T14:32:00.435723Z",
+     "iopub.status.busy": "2025-06-12T14:32:00.435522Z",
+     "iopub.status.idle": "2025-06-12T14:32:00.441441Z",
+     "shell.execute_reply": "2025-06-12T14:32:00.440924Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:00.435703Z"
     }
    },
    "outputs": [],
@@ -281,15 +281,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "d51569a8-7e46-4752-8e1f-e662177cab9b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:56.549031Z",
-     "iopub.status.busy": "2025-06-12T13:50:56.548703Z",
-     "iopub.status.idle": "2025-06-12T13:50:57.213489Z",
-     "shell.execute_reply": "2025-06-12T13:50:57.212713Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:56.549004Z"
+     "iopub.execute_input": "2025-06-12T14:32:00.703904Z",
+     "iopub.status.busy": "2025-06-12T14:32:00.703608Z",
+     "iopub.status.idle": "2025-06-12T14:32:01.125569Z",
+     "shell.execute_reply": "2025-06-12T14:32:01.124970Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:00.703882Z"
     }
    },
    "outputs": [
@@ -299,7 +299,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,15 +328,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "ebc18688-153b-4829-808b-a10a5c6bfc2c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:57.214710Z",
-     "iopub.status.busy": "2025-06-12T13:50:57.214469Z",
-     "iopub.status.idle": "2025-06-12T13:50:57.218762Z",
-     "shell.execute_reply": "2025-06-12T13:50:57.217657Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:57.214686Z"
+     "iopub.execute_input": "2025-06-12T14:32:01.199857Z",
+     "iopub.status.busy": "2025-06-12T14:32:01.199570Z",
+     "iopub.status.idle": "2025-06-12T14:32:01.203254Z",
+     "shell.execute_reply": "2025-06-12T14:32:01.202456Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:01.199833Z"
     }
    },
    "outputs": [],
@@ -346,15 +346,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "82c57cc6-42bf-44ee-b2cc-f580b1b03dc6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:57.436121Z",
-     "iopub.status.busy": "2025-06-12T13:50:57.435776Z",
-     "iopub.status.idle": "2025-06-12T13:50:57.441600Z",
-     "shell.execute_reply": "2025-06-12T13:50:57.440960Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:57.436095Z"
+     "iopub.execute_input": "2025-06-12T14:32:01.422785Z",
+     "iopub.status.busy": "2025-06-12T14:32:01.422536Z",
+     "iopub.status.idle": "2025-06-12T14:32:01.427186Z",
+     "shell.execute_reply": "2025-06-12T14:32:01.426491Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:01.422764Z"
     }
    },
    "outputs": [],
@@ -365,15 +365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "96645b7a-b952-45b3-8f00-c6ba5cb88651",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:57.730284Z",
-     "iopub.status.busy": "2025-06-12T13:50:57.729588Z",
-     "iopub.status.idle": "2025-06-12T13:50:57.736668Z",
-     "shell.execute_reply": "2025-06-12T13:50:57.735712Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:57.730254Z"
+     "iopub.execute_input": "2025-06-12T14:32:01.674924Z",
+     "iopub.status.busy": "2025-06-12T14:32:01.674532Z",
+     "iopub.status.idle": "2025-06-12T14:32:01.679012Z",
+     "shell.execute_reply": "2025-06-12T14:32:01.678428Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:01.674903Z"
     }
    },
    "outputs": [],
@@ -384,15 +384,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "8b1f6433-8825-44dc-9cc4-7c76ceabe41f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:57.939234Z",
-     "iopub.status.busy": "2025-06-12T13:50:57.938931Z",
-     "iopub.status.idle": "2025-06-12T13:50:57.953329Z",
-     "shell.execute_reply": "2025-06-12T13:50:57.952416Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:57.939208Z"
+     "iopub.execute_input": "2025-06-12T14:32:01.894057Z",
+     "iopub.status.busy": "2025-06-12T14:32:01.893561Z",
+     "iopub.status.idle": "2025-06-12T14:32:01.903861Z",
+     "shell.execute_reply": "2025-06-12T14:32:01.903137Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:01.894035Z"
     }
    },
    "outputs": [
@@ -411,15 +411,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "1317a336-e130-4874-ad10-68ffa780ea77",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:58.263454Z",
-     "iopub.status.busy": "2025-06-12T13:50:58.263135Z",
-     "iopub.status.idle": "2025-06-12T13:50:58.332513Z",
-     "shell.execute_reply": "2025-06-12T13:50:58.331829Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:58.263430Z"
+     "iopub.execute_input": "2025-06-12T14:32:02.396504Z",
+     "iopub.status.busy": "2025-06-12T14:32:02.396039Z",
+     "iopub.status.idle": "2025-06-12T14:32:02.425625Z",
+     "shell.execute_reply": "2025-06-12T14:32:02.425173Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:02.396486Z"
     }
    },
    "outputs": [
@@ -440,15 +440,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "267c25a7-3bb5-49ef-aea1-049d795be8d5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:58.549819Z",
-     "iopub.status.busy": "2025-06-12T13:50:58.547632Z",
-     "iopub.status.idle": "2025-06-12T13:50:58.794461Z",
-     "shell.execute_reply": "2025-06-12T13:50:58.793710Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:58.549778Z"
+     "iopub.execute_input": "2025-06-12T14:32:02.444032Z",
+     "iopub.status.busy": "2025-06-12T14:32:02.443600Z",
+     "iopub.status.idle": "2025-06-12T14:32:02.651908Z",
+     "shell.execute_reply": "2025-06-12T14:32:02.651179Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:02.444010Z"
     }
    },
    "outputs": [
@@ -456,7 +456,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jun 12 14:50:58 2025       \n",
+      "Thu Jun 12 15:32:02 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 570.124.06             Driver Version: 570.124.06     CUDA Version: 12.8     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -465,7 +465,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 3050 ...    On  |   00000000:01:00.0 Off |                  N/A |\n",
-      "| N/A   53C    P0             12W /   65W |     157MiB /   4096MiB |      0%      Default |\n",
+      "| N/A   50C    P0             12W /   65W |     157MiB /   4096MiB |      9%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -475,7 +475,7 @@
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
       "|    0   N/A  N/A            2527      G   /usr/bin/gnome-shell                      1MiB |\n",
-      "|    0   N/A  N/A            5605      C   ...ptimizedfinetuning/bin/python        138MiB |\n",
+      "|    0   N/A  N/A            9506      C   ...ptimizedfinetuning/bin/python        138MiB |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -494,15 +494,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "b3778f7d-9411-4ae4-97fd-89b8d3589e96",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:50:59.239908Z",
-     "iopub.status.busy": "2025-06-12T13:50:59.239596Z",
-     "iopub.status.idle": "2025-06-12T13:50:59.246590Z",
-     "shell.execute_reply": "2025-06-12T13:50:59.245916Z",
-     "shell.execute_reply.started": "2025-06-12T13:50:59.239882Z"
+     "iopub.execute_input": "2025-06-12T14:32:03.435060Z",
+     "iopub.status.busy": "2025-06-12T14:32:03.434561Z",
+     "iopub.status.idle": "2025-06-12T14:32:03.439664Z",
+     "shell.execute_reply": "2025-06-12T14:32:03.439111Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:03.435036Z"
     }
    },
    "outputs": [],
@@ -523,15 +523,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "54ad767b-6578-43db-bd29-9e5882dd30c9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:51:00.096006Z",
-     "iopub.status.busy": "2025-06-12T13:51:00.095588Z",
-     "iopub.status.idle": "2025-06-12T13:51:00.099140Z",
-     "shell.execute_reply": "2025-06-12T13:51:00.098551Z",
-     "shell.execute_reply.started": "2025-06-12T13:51:00.095981Z"
+     "iopub.execute_input": "2025-06-12T14:32:05.285967Z",
+     "iopub.status.busy": "2025-06-12T14:32:05.285471Z",
+     "iopub.status.idle": "2025-06-12T14:32:05.288793Z",
+     "shell.execute_reply": "2025-06-12T14:32:05.288068Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:05.285947Z"
     }
    },
    "outputs": [],
@@ -569,15 +569,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "d52be3ab-7ceb-450c-8ac9-090040b73605",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:51:01.343663Z",
-     "iopub.status.busy": "2025-06-12T13:51:01.343100Z",
-     "iopub.status.idle": "2025-06-12T13:51:01.347636Z",
-     "shell.execute_reply": "2025-06-12T13:51:01.346981Z",
-     "shell.execute_reply.started": "2025-06-12T13:51:01.343636Z"
+     "iopub.execute_input": "2025-06-12T14:32:19.037620Z",
+     "iopub.status.busy": "2025-06-12T14:32:19.037347Z",
+     "iopub.status.idle": "2025-06-12T14:32:19.041331Z",
+     "shell.execute_reply": "2025-06-12T14:32:19.040557Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:19.037597Z"
     }
    },
    "outputs": [],
@@ -590,15 +590,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "f2eb021e-31cb-4dfd-b032-8e20cdbe6a58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:51:36.181622Z",
-     "iopub.status.busy": "2025-06-12T13:51:36.181413Z",
-     "iopub.status.idle": "2025-06-12T13:51:36.190485Z",
-     "shell.execute_reply": "2025-06-12T13:51:36.189873Z",
-     "shell.execute_reply.started": "2025-06-12T13:51:36.181606Z"
+     "iopub.execute_input": "2025-06-12T14:32:19.433513Z",
+     "iopub.status.busy": "2025-06-12T14:32:19.433296Z",
+     "iopub.status.idle": "2025-06-12T14:32:19.443472Z",
+     "shell.execute_reply": "2025-06-12T14:32:19.442547Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:19.433498Z"
     }
    },
    "outputs": [],
@@ -630,8 +630,8 @@
     "            # Step optimizer every `accumulation_steps` batches\n",
     "            if (step + 1) % accumulation_steps == 0:\n",
     "                scaler.step(optimizer)\n",
-    "                optimizer.zero_grad()\n",
     "                scaler.update()\n",
+    "                optimizer.zero_grad()\n",
     "\n",
     "\n",
     "            \n",
@@ -645,7 +645,8 @@
     "\n",
     "        # Final step if total steps not divisible by accumulation_steps\n",
     "        if (step + 1) % accumulation_steps != 0:\n",
-    "            optimizer.step()\n",
+    "            scaler.step(optimizer)\n",
+    "            scaler.update()\n",
     "            optimizer.zero_grad()\n",
     "\n",
     "        # Validation\n",
@@ -685,15 +686,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "1ac8461f-446c-41df-8963-62c77c4b3048",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-06-12T13:51:37.029419Z",
-     "iopub.status.busy": "2025-06-12T13:51:37.029195Z",
-     "iopub.status.idle": "2025-06-12T13:52:39.359827Z",
-     "shell.execute_reply": "2025-06-12T13:52:39.359398Z",
-     "shell.execute_reply.started": "2025-06-12T13:51:37.029404Z"
+     "iopub.execute_input": "2025-06-12T14:32:19.968094Z",
+     "iopub.status.busy": "2025-06-12T14:32:19.967751Z",
+     "iopub.status.idle": "2025-06-12T14:33:17.682814Z",
+     "shell.execute_reply": "2025-06-12T14:33:17.682362Z",
+     "shell.execute_reply.started": "2025-06-12T14:32:19.968048Z"
     }
    },
    "outputs": [
@@ -701,12 +702,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3: Train Loss: 0.2251, Train Acc: 0.9097, Val Loss: 0.3350, Val Acc: 0.8839\n",
-      "  Allocated Memory    : 194.92 MB   Reserved Memory      : 456.00 MB   Peak Allocated Memory: 1052.84 MB\n",
-      "Epoch 2/3: Train Loss: 0.2284, Train Acc: 0.9127, Val Loss: 0.3661, Val Acc: 0.8929\n",
-      "  Allocated Memory    : 194.92 MB   Reserved Memory      : 456.00 MB   Peak Allocated Memory: 1052.84 MB\n",
-      "Epoch 3/3: Train Loss: 0.2531, Train Acc: 0.8934, Val Loss: 0.3951, Val Acc: 0.8929\n",
-      "  Allocated Memory    : 194.92 MB   Reserved Memory      : 456.00 MB   Peak Allocated Memory: 1052.84 MB\n"
+      "Epoch 1/3: Train Loss: 0.2347, Train Acc: 0.9038, Val Loss: 0.3368, Val Acc: 0.8705\n",
+      "  Allocated Memory    : 161.34 MB   Reserved Memory      : 422.00 MB   Peak Allocated Memory: 1019.26 MB\n",
+      "Epoch 2/3: Train Loss: 0.1971, Train Acc: 0.9211, Val Loss: 0.3164, Val Acc: 0.8929\n",
+      "  Allocated Memory    : 161.34 MB   Reserved Memory      : 424.00 MB   Peak Allocated Memory: 1019.26 MB\n",
+      "Epoch 3/3: Train Loss: 0.1867, Train Acc: 0.9266, Val Loss: 0.3196, Val Acc: 0.8929\n",
+      "  Allocated Memory    : 161.34 MB   Reserved Memory      : 422.00 MB   Peak Allocated Memory: 1019.26 MB\n"
      ]
     }
    ],
@@ -955,10 +956,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "fbb55156-4628-4d3d-a1cc-ee5f231cd27c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-12T14:30:22.653923Z",
+     "iopub.status.busy": "2025-06-12T14:30:22.653689Z",
+     "iopub.status.idle": "2025-06-12T14:30:22.666013Z",
+     "shell.execute_reply": "2025-06-12T14:30:22.665683Z",
+     "shell.execute_reply.started": "2025-06-12T14:30:22.653905Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU memory cleared.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'status': 'ok', 'restart': True}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython import get_ipython\n",
     "import torch\n",
